<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.taras.wallpers.fragments.profile.ProfileFragment">


    <TextView
        android:id="@+id/textViewFollowersCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewFollowingCount"
        app:layout_constraintStart_toEndOf="@+id/imageView_profile"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalPhotos"
        tools:text="@string/profileFragment_followers" />

    <TextView
        android:id="@+id/textViewFollowingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="16dp"
        android:fontFamily="serif"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_profile"
        app:layout_constraintStart_toEndOf="@+id/imageView_profile"
        tools:text="@string/profileFragment_following" />

    <TextView
        android:id="@+id/textViewTotalPhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:fontFamily="serif"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/imageView_profile"
        app:layout_constraintTop_toTopOf="@+id/imageView_profile"
        tools:text="@string/profileFragment_photos" />

    <ImageView
        android:id="@+id/imageView_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:minHeight="200dp"
        android:src="@drawable/ic_user_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_profile"
        tools:text="Fname Sname" />

    <TextView
        android:id="@+id/textViewTwitterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:textColor="@color/colorPrimaryMoreDark"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        tools:text="twittername"/>

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toEndOf="@+id/buttonLocation"
        app:layout_constraintTop_toBottomOf="@+id/textViewTwitterName"
        tools:text="Tehas" />

    <Button
        android:id="@+id/buttonLocation"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_location_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTwitterName" />

    <TextView
        android:id="@+id/textViewBio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocation"
        tools:text="Qweqwe qsad qwepas pj;lkjadsqwepoij oijaosijdqowie oijoijq asd qwq eqwe asjnd qw."/>
</android.support.constraint.ConstraintLayout>
